--- a/packages/footer/src/styles/modules/_content.scss
+++ b/packages/footer/src/styles/modules/_content.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-basis: 100%;
-  margin-top: space(3N);
+  margin-top: space(3w);
 
   @include respond-from(md) {
     margin-top: 0;
@@ -15,7 +15,7 @@
   }
 
   .#{$prefix}-footer__body--operator & {
-    margin-top: space(3N);
+    margin-top: space(3w);
 
     @include respond-from(lg) {
       margin-top: 0;
@@ -25,7 +25,7 @@
 }
 
 &__content-desc {
-  margin: 0 0 space(2N);
+  margin: 0 0 space(2w);
   line-height: line-height(normal);
 }
 
@@ -33,11 +33,11 @@
   display: flex;
   flex-direction: column;
   align-self: flex-end;
-  margin-bottom: -(space(2N));
+  margin-bottom: -(space(2w));
 
   > li {
-    margin-right: space(3N);
-    margin-top: space(1N);
+    margin-right: space(3w);
+    margin-top: space(1w);
 
     &::before {
       content: none;
@@ -54,7 +54,7 @@
     }
 
     @include respond-from(sm) {
-      margin-right: space(7N);
+      margin-right: space(7w);
     }
   }
 
